<resources>
    <string name="app_name">Book Log</string>
    <string name="sell">Sell Stock</string>
    <string name="hint_book_title">Title *</string>
    <string name="hint_price">Price in Rs *</string>
    <string name="quantity">Quantity *</string>
    <string name="hint_supplier_name">Name *</string>
    <string name="hint_supplier_phone">Phone No.</string>
    <string name="hint_supplier_email">Email</string>
    <string name="save_book">Save Book</string>
    <string name="delete_book">Delete Book</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="pieces">pcs</string>
    <string name="no_desc_available">No description available</string>
    <string name="in_stock">In stock:</string>
    <string name="overview">Overview</string>
    <string name="hint_book_author">Author</string>
    <string name="hint_book_isbn">ISBN</string>
    <string name="supplier">Supplier</string>
    <string name="select_a_new_image">Tap to select a new image</string>
    <string name="unknown_author">Unknown</string>
    <string name="isbn_not_available">Not Available</string>
    <string name="empty_string"><b>Uh oh! Nothing here, but me.</b>\nStart by adding some books!</string>
    <string name="contact_supplier">Order</string>
    <string name="email_at">Email at %s</string>
    <string name="call_at">Call at %s</string>
    <string name="contact">Contact \ </string>
    <string name="splash_screen_text">Just a moment.. We\'re getting your books!</string>
    <string name="add_book">Add a new book</string>
    <string name="edit_book">Edit book</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="delete_confirm">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="negative_quantity_error">Quantity cannot be less than 0</string>
    <string name="title_empty_error">Title cannot be empty</string>
    <string name="price_invalid_error">Valid price required</string>
    <string name="quantity_missing_error">Quantity required</string>
    <string name="supplier_name_error">Supplier name is required</string>
    <string name="supplier_details_missing_error">Either one of supplier\'s phone or email is required</string>
    <string name="error_save_book">Error saving book</string>
    <string name="success_save_book">Book saved</string>
    <string name="error_update_book">Error updating book</string>
    <string name="success_update_book">Book updated</string>
    <string name="error_delete_book">Error deleting book</string>
    <string name="success_delete_book">Book deleted</string>
    <string name="product_out_of_stock">Product out of stock. Order from supplier.</string>
    <string name="email_subject">Order for book : %s</string>
    <string name="email_body">Hello!\n\n\tWe\'d like to order a set of %1d copies of the book titled: %2s. Kindly process the request as soon as possible.\n\nRegards,\nAmelia\nDirector\nBook Log Ltd.</string>
</resources>
